<resources>
    <string name="app_name">TV Maze Client</string>

    <string name="choose_evaluate">CHOOSE WHICH VIEW DO YOU WANT TO EVALUATE?</string>
    <string name="jetpack_compose">JETPACK COMPOSE</string>
    <string name="xml_based">XML-BASED</string>
    <string name="login_button">LOGIN</string>
    <string name="create_button">CREATE PIN</string>
    <string name="pin_placeholder">PIN</string>
    <string name="search_placeholder">Search</string>
    <string name="all_episodes_label">ALL EPISODES</string>
    <string name="cast">CAST</string>
    <string name="all_shows_label">ALL SHOWS</string>
    <string name="pin">PIN</string>
    <string name="or">OR</string>
    <string name="phone_authentication">PHONE AUTHENTICATION</string>
    <string name="empty_pin">Pin cannot be empty</string>
    <string name="incorrect_pin">Incorrect pin</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="login_canceled">Login cancelled by the user</string>
    <string name="authentication">Authentication</string>
    <string name="login_biometric">Log in using your biometric credential</string>
    <string name="login_biometric_negative">Biometric credential not provided</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="biometric_enrolled">No biometric or device credential is enrolled.</string>
    <string name="no_biometric_available">No biometric features available on this device.</string>
    <string name="biometric_unavailable">Biometric features are currently unavailable.</string>
    <string name="biometric_unsupported">Biometric is unsupported on this device.</string>
    <string name="cant_authenticate_with_biometrics">The app can\'t authenticate with biometrics</string>
    <string name="login_preferred_credential">Log in using your preferred credential</string>
    <string name="phone_dont_have_sercurity_login">Your phone don\'t have any security login</string>
    <string name="authentication_error">Authentication error: </string>
    <string name="delete_favorite_feedback">%1$s was deleted from favorites successfully</string>
    <string name="add_favorite_feedback">%1$s was added to favorites successfully</string>
    <string name="enough_info_about_person">We don\'t have more information about %1$s</string>
    <string name="error_getting_shows">Error getting shows: %1$s</string>
    <string name="person_without_shows">%1$s did not participate in any show</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_chooser">ChooserActivity</string>
    <string name="title_activity_shows">TV Shows</string>
    <string name="title_activity_people">People</string>
    <string name="premier_label">Premier</string>
    <string name="ended_at_label">Ended at</string>
    <string name="not_started">Not Started</string>
    <string name="running">Running</string>

</resources>