...
                .padding(top = 68.dp, start = 20.dp, end = 20.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            LottieAnimation(
                composition = composition,
                progress = { progress },
                modifier = Modifier.testTag("Lottie").size(300.dp)
            )
            Spacer(modifier = Modifier.height(12.dp))
            OutlinedTextField(
                modifier = Modifier.testTag("PinField").fillMaxWidth(),
                value = pinState.value,
                onValueChange = { pinState.value = it },
                label = { Text(stringResource(id = R.string.pin)) }
            )
            Spacer(modifier = Modifier.height(12.dp))
            Button(
...
